fix: fix the jobs overflow

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -184,6 +184,7 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
+		word-break: break-word;
 		row-gap: 7.5px;
 
 		@include desktop {
@@ -215,6 +216,10 @@
 
 	&__job-logo {
 		min-width: 17px;
+
+		&--long {
+			min-width: 37px;
+		}
 	}
 
 	&__job-company-box {
